# nakamoto

./: .gitignore  .gitsigners  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO  deny.toml  shell.nix
.github/: FUNDING.yml
.github/workflows/: actions.yml
chain/: Cargo.toml
chain/src/: block.rs  filter.rs  lib.rs
chain/src/block/: cache.rs  store.rs
chain/src/block/cache/: test.rs
chain/src/block/store/: io.rs  memory.rs
chain/src/filter/: cache.rs  store.rs
chain/src/tests/: mod.rs
client/: Cargo.toml
client/examples/: custom-dialer.rs
client/src/: client.rs  error.rs  event.rs  handle.rs  lib.rs  model.rs  peer.rs  service.rs  spv.rs  tests.rs  txnmgr.rs
client/src/spv/: blockmgr.rs  event.rs  filtermgr.rs  handle.rs  tests.rs  utxos.rs  watchlist.rs
client/src/tests/: mock.rs
common/: Cargo.toml
common/src/: block.rs  collections.rs  dns.rs  lib.rs  network.rs  p2p.rs
common/src/block/: checkpoints.rs  filter.rs  genesis.rs  iter.rs  store.rs  time.rs  tree.rs
common/src/p2p/: peer.rs
daemon/: Cargo.toml
daemon/src/: logger.rs  main.rs
docs/: nakamoto-talk.md
nakamoto-chain/: Cargo.toml
nakamoto-chain/src/: block.rs  blocktree.rs  checkpoints.rs  lib.rs
nakamoto-chain/src/block/: cache.rs  store.rs  time.rs  tree.rs
nakamoto-chain/src/block/cache/: model.rs  test.rs
nakamoto-chain/src/block/store/: io.rs  memory.rs
nakamoto-chain/src/tests/: mod.rs
nakamoto-common/: Cargo.toml
nakamoto-common/src/: lib.rs
nakamoto-common/src/block/: genesis.rs  store.rs  time.rs  tree.rs
nakamoto-daemon/: Cargo.toml
nakamoto-daemon/src/: lib.rs  main.rs
nakamoto-node/: Cargo.toml
nakamoto-node/src/: error.rs  handle.rs  lib.rs  node.rs  tests.rs
nakamoto-p2p/: Cargo.toml
nakamoto-p2p/src/: address_book.rs  error.rs  event.rs  lib.rs  peer.rs  protocol.rs  prototype.rs  reactor.rs  tcp.rs
nakamoto-p2p/src/peer/: network.rs
nakamoto-p2p/src/protocol/: bitcoin.rs
nakamoto-p2p/src/protocol/bitcoin/: address_manager.rs  addrmgr.rs  network.rs  syncmgr.rs  tests.rs
nakamoto-p2p/src/protocol/bitcoin/tests/: simulator.rs
nakamoto-p2p/src/reactor/: poll.rs  threaded.rs  time.rs
nakamoto-test/: Cargo.toml
nakamoto-test/src/: block.rs  lib.rs
nakamoto-test/src/block/cache/: model.rs
net/: Cargo.toml
net/poll/: Cargo.toml
net/poll/src/: dialer.rs  fallible.rs  lib.rs  reactor.rs  socket.rs  time.rs
net/polling/: Cargo.toml
net/polling/src/: reactor.rs  socket.rs  time.rs
net/src/: error.rs  event.rs  lib.rs  simulator.rs  time.rs
net/src/simulator/: arbitrary.rs
node/: Cargo.toml
node/src/: error.rs  handle.rs  lib.rs  logger.rs  main.rs  node.rs  tests.rs
p2p/: Cargo.toml
p2p/src/: address_book.rs  checkpoints.rs  error.rs  event.rs  fallible.rs  fsm.rs  lib.rs  protocol.rs  reactor.rs  stream.rs  traits.rs
p2p/src/fsm/: addrmgr.rs  cbfmgr.rs  event.rs  fees.rs  filter_cache.rs  invmgr.rs  output.rs  peermgr.rs  pingmgr.rs  syncmgr.rs  tests.rs
p2p/src/fsm/cbfmgr/: rescan.rs
p2p/src/fsm/tests/: peer.rs  simulations.rs
p2p/src/protocol/: addrmgr.rs  bitcoin.rs  cbfmgr.rs  channel.rs  connmgr.rs  event.rs  executor.rs  fees.rs  filter_cache.rs  invmgr.rs  output.rs  peermgr.rs  pingmgr.rs  spvmgr.rs  syncmgr.rs  tests.rs  txnmgr.rs  watchlist.rs
p2p/src/protocol/bitcoin/: addrmgr.rs  channel.rs  connmgr.rs  network.rs  pingmgr.rs  spvmgr.rs  syncmgr.rs  tests.rs
p2p/src/protocol/bitcoin/tests/: simulator.rs
p2p/src/protocol/cbfmgr/: cache.rs  rescan.rs
p2p/src/protocol/tests/: peer.rs  simulations.rs  simulator.rs
p2p/src/reactor/: poll.rs  time.rs
src/: lib.rs  logger.rs  main.rs
test/: Cargo.toml
test/src/: assert.rs  block.rs  lib.rs
test/src/block/cache/: model.rs
wallet/: Cargo.toml
wallet/src/: error.rs  input.rs  lib.rs  logger.rs  main.rs  wallet.rs
wallet/src/wallet/: db.rs  hw.rs  schema.sql  ui.rs
wallet/src/wallet/db/: types.rs
wallet/src/wallet/ui/: table.rs
