[package]
name = "nakamoto"
description = "A high-assurance Bitcoin light-client"
documentation = "https://docs.rs/nakamoto"
repository = "https://github.com/cloudhead/nakamoto"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[workspace]
members = [
  "common",
  "p2p",
  "chain",
  "node",
  "test",
  "daemon",
]

[features]
default = ["nakamoto-node", "nakamoto-chain", "nakamoto-p2p", "nakamoto-common"]

[dependencies]
nakamoto-common = { version = "0.1.0", path = "./common", optional = true }
nakamoto-node = { version = "0.1.0", path = "./node", optional = true }
nakamoto-daemon = { version = "0.1.0", path = "./daemon", optional = true }
nakamoto-chain = { version = "0.1.0", path = "./chain", optional = true }
nakamoto-p2p = { version = "0.1.0", path = "./p2p", optional = true }
nakamoto-test = { version = "0.1.0", path = "./test", optional = true }
