[package]
name = "nakamoto"
description = "A high-assurance Bitcoin light-client"
documentation = "https://docs.rs/nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
repository = "https://github.com/cloudhead/nakamoto"
readme = "README.md"
license = "MIT"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[workspace]
members = [
  "common",
  "p2p",
  "chain",
  "node",
  "test",
  "client",
  "wallet",
  "net/poll",
]

[features]
default = [
  "nakamoto-client",
  "nakamoto-chain",
  "nakamoto-p2p",
  "nakamoto-common",
  "nakamoto-net-poll"
]

[dependencies]
nakamoto-common = { version = "0.2.0", path = "./common", optional = true }
nakamoto-node = { version = "0.2.0", path = "./node", optional = true }
nakamoto-client = { version = "0.2.0", path = "./client", optional = true }
nakamoto-chain = { version = "0.2.0", path = "./chain", optional = true }
nakamoto-p2p = { version = "0.2.0", path = "./p2p", optional = true }
nakamoto-test = { version = "0.2.0", path = "./test", optional = true }
nakamoto-wallet = { version = "0.2.0", path = "./wallet", optional = true }
nakamoto-net-poll = { version = "0.2.0", path = "./net/poll", optional = true }
