[package]
name = "nakamoto-chain"
description = "Chain storage and fork selection used by the nakamoto crate."
documentation = "https://docs.rs/nakamoto-chain"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.1.0", path = "../common", features = ["log"] }
bitcoin = "0.25.0"
bitcoin_hashes = "0.9.0"
nonempty = "0.5.0"
log = "0.4"

[dev-dependencies]
nakamoto-test = { path = "../test" }
quickcheck = { version = "0.9", default_features = false, features = ["use_logging"] }
quickcheck_macros = "0.9"
tempfile = "3"
rand = "0.7"
