[package]
name = "nakamoto-chain"
description = "Chain storage and fork selection used by the nakamoto crate."
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-chain"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.2.0", path = "../common", features = ["log"] }
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
nakamoto-test = { version = "0.2.0", path = "../test" }
quickcheck = { version = "1", default_features = false }
quickcheck_macros = "1"
tempfile = "3"
fastrand = "1.3.5"
