[package]
name = "nakamoto-common"
description = "Common types and functions shared by all nakamoto crates"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-common"
repository = "https://github.com/cloudhead/nakamoto"
license = "MIT"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[dependencies]
bitcoin = "0.27.0"
bitcoin_hashes = "0.10.0"
thiserror = "1.0"
fastrand = "1.3.5"
nonempty = "0.7"
microserde = "0.1"
log = { version = "0.4", optional = true }
