[package]
name = "nakamoto-common"
description = "Common types and functions shared by all nakamoto crates"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-common"
repository = "https://github.com/cloudhead/nakamoto"
license = "MIT"
version = "0.4.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"

[dependencies]
nakamoto-net = { version = "0.4.0", path = "../net" }
bitcoin = { git = "https://github.com/vincenzopalazzo/rust-bitcoin.git", branch = "macros/calculate-next-work-requried" }
thiserror = "1.0"
fastrand = "1.3.5"
nonempty = "0.7"
microserde = "0.1"
log = { version = "0.4", optional = true }
