[package]
name = "nakamoto-daemon"
description = "Bitcoin light-client daemon using nakamoto crates"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-node = { version = "0.1.0", path = "../node" }
argh = "0.1.3"
colored = "1.9"
atty = { version = "0.2" }
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
