[package]
name = "nakamoto-chain"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[dependencies]
bitcoin = "0.23.0"
bitcoin_hashes = "0.7.6"
thiserror = "1.0"
nonempty = "0.5.0"

[dev-dependencies]
quickcheck = { version = "0.9", default_features = false, features = ["use_logging"] }
quickcheck_macros = "0.9"
rand = "*"
