[package]
name = "nakamoto-daemon"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[features]
default = ["logging"]
logging = ["fern"]

[dependencies]
nakamoto-p2p = { path = "../nakamoto-p2p" }
nakamoto-chain = { path = "../nakamoto-chain" }
argh = "0.1.3"
fern = { version = "0.6", features = ["colored"], optional = true }
log = "0.4"
