[package]
name = "nakamoto-p2p"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[dependencies]
nakamoto-common = { version = "0.1.0", path = "../nakamoto-common" }
bitcoin = "0.23.0"
log = "0.4"
thiserror = "1.0"
bitcoin_hashes = "0.7.6"
crossbeam-channel = { version = "0.4", default-features = false }
fastrand = "1.3"
popol = "0.3"

[dev-dependencies]
nakamoto-test = { path = "../nakamoto-test" }
tempfile = "3"
lazy_static = "1.4"
