[package]
name = "nakamoto-test"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.1.0", path = "../nakamoto-common" }
bitcoin = "0.23"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
nonempty = "0.5"
