[package]
name = "nakamoto-net"
description = "Lightweight peer-to-peer networking"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-net"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.3.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"
license = "MIT"

[features]
default = []

[dependencies]
log = "0.4"
thiserror = "1.0"
crossbeam-channel = { version = "0.5.6" }
quickcheck = { version = "1", optional = true }
fastrand = "1.3.5"
