[package]
name = "nakamoto-node"
description = "Bitcoin light-client node using nakamoto crates"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-client = { version = "0.1.0", path = "../client" }
argh = "0.1.3"
colored = "1.9"
atty = { version = "0.2" }
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
