[package]
name = "nakamoto-node"
description = "Bitcoin light-client node using nakamoto crates"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-node"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.3.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"
license = "MIT"

[dependencies]
nakamoto-client = { version = "0.3.0", path = "../client" }
nakamoto-net-poll = { version = "0.3.0", path = "../net/poll" }
argh = "0.1.3"
colored = "1.9"
atty = { version = "0.2" }
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
