[package]
name = "nakamoto-p2p"
description = "Peer-to-peer protocol state machine for the nakamoto crate"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.1.0", path = "../common" }
bitcoin = "0.25.1"
log = "0.4"
thiserror = "1.0"
bitcoin_hashes = "0.9.0"
crossbeam-channel = { version = "0.4" }
fastrand = "1.3.5"
nonempty = "0.5"
microserde = "0.1"

[dev-dependencies]
nakamoto-test = { path = "../test" }
nakamoto-chain = { path = "../chain" }
tempfile = "3"
lazy_static = "1.4"
quickcheck = { version = "0.9", default_features = false, features = ["use_logging"] }
quickcheck_macros = "0.9"
