[package]
name = "nakamoto-p2p"
description = "Peer-to-peer protocol state machine for the nakamoto crate"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-p2p"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.1"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.2.0", path = "../common" }
bitcoin = "0.26.0"
log = "0.4"
thiserror = "1.0"
bitcoin_hashes = "0.9.0"
crossbeam-channel = { version = "0.4" }
fastrand = "1.3.5"
microserde = "0.1"

[dev-dependencies]
nakamoto-test = { version = "0.2.0", path = "../test" }
nakamoto-chain = { version = "0.2.0", path = "../chain" }
tempfile = "3"
quickcheck = { version = "0.9", default_features = false, features = ["use_logging"] }
quickcheck_macros = "0.9"
