[package]
name = "nakamoto-test"
description = "Testing utilities for nakamoto crates"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-test"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.2.0", path = "../common" }
bitcoin = "0.26.0"
bitcoin_hashes = "0.9.0"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
fastrand = "1.3.5"
colored = "1.9"
