[package]
name = "nakamoto-test"
description = "Testing utilities for nakamoto crates"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-test"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.3.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.3.0", path = "../common" }
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
fastrand = "1.3.5"
colored = "1.9"
quickcheck = { version = "1", default_features = false }
