[package]
name = "nakamoto-wallet"
description = "Very basic command-line Bitcoin wallet using nakamoto"
version = "0.1.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-client = { path = "../client" }
nakamoto-net-poll = { path = "../net/poll" }
nakamoto-p2p = { path = "../p2p" }
nakamoto-common = { path = "../common" }
bitcoin = { version = "0.25.1" }
log = { version = "0.4", features = ["std"] }
argh = { version = "0.1.3" }
crossbeam-channel = { version = "0.4" }
chrono = { version = "0.4" }
