[package]
name = "nakamoto-wallet"
description = "Very basic command-line Bitcoin wallet using nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-wallet"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-client = { version = "0.2.0", path = "../client" }
nakamoto-net-poll = { version = "0.2.0", path = "../net/poll" }
nakamoto-p2p = { version = "0.2.0", path = "../p2p" }
nakamoto-common = { version = "0.2.0", path = "../common" }
bitcoin = { version = "0.26.0" }
log = { version = "0.4", features = ["std"] }
argh = { version = "0.1.3" }
crossbeam-channel = { version = "0.4" }
chrono = { version = "0.4" }
thiserror = { version = "1.0" }
