[package]
name = "nakamoto-wallet"
description = "Very basic command-line Bitcoin wallet using nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
documentation = "https://docs.rs/nakamoto-wallet"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.4.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"
license = "MIT"

[dependencies]
nakamoto-client = { version = "0.4.0", path = "../client" }
nakamoto-net-poll = { version = "0.4.0", path = "../net/poll" }
nakamoto-p2p = { version = "0.4.0", path = "../p2p" }
nakamoto-common = { version = "0.4.0", path = "../common" }
log = { version = "0.4", features = ["std"] }
argh = { version = "0.1.3" }
crossbeam-channel = { version = "0.5.6" }
chrono = { version = "0.4", features = ["std"], default-features = false }
coldcard = { version = "0.5", default-features = false, features = ["linux-static-libusb"] }
thiserror = { version = "1.0" }
sqlite = { version = "0.27.0" }
sqlite3-sys = { version = "0.14", default-features = false }
sqlite3-src = { version = "0.4.0", features = ["bundled"] }
termion = { version = "1.5.6" }
signal-hook = { version = "0.3.14", features = ["iterator"], default-features = false }

[dev-dependencies]
nakamoto-test = { version = "0.4.0", path = "../test" }
