[package]
name = "nakamoto-net-poll"
description = "Poll-based networking for nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.2.0"
authors = ["Alexis Sellier <alexis@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.2.0", path = "../../common" }
nakamoto-p2p = { version = "0.2.0", path = "../../p2p" }
crossbeam-channel = { version = "0.4" }
bitcoin = "0.26.0"
popol = "0.4"
socket2 = "0.3"
libc = "0.2.71"
log = "0.4"

[dev-dependencies]
lazy_static = "1.4"
fastrand = "1.3.5"
