[package]
name = "nakamoto-net-poll"
description = "Poll-based networking for nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.3.0"
authors = ["Alexis Sellier <alexis@cloudhead.io>"]
edition = "2021"
license = "MIT"

[dependencies]
nakamoto-common = { version = "0.3.0", path = "../../common" }
nakamoto-p2p = { version = "0.3.0", path = "../../p2p" }
crossbeam-channel = { version = "0.5.6" }
popol = "0.5"
socket2 = "0.4"
libc = "0.2.71"
log = "0.4"

[dev-dependencies]
lazy_static = "1.4"
fastrand = "1.3.5"
quickcheck = { version = "1", default-features = false }
quickcheck_macros = "1"
