[package]
name = "nakamoto-net-poll"
description = "Poll-based networking for nakamoto"
homepage = "https://cloudhead.io/nakamoto/"
repository = "https://github.com/cloudhead/nakamoto"
version = "0.3.0"
authors = ["Alexis Sellier <alexis@cloudhead.io>"]
edition = "2021"
license = "MIT"

[dependencies]
nakamoto-net = { version = "0.3.0", path = ".." }
crossbeam-channel = { version = "0.5.6" }
popol = { version = "2" }
socket2 = { version = "0.4" }
libc = { version = "0.2" }
log = { version = "0.4" }

[dev-dependencies]
lazy_static = "1.4"
fastrand = "1.3.5"
quickcheck = { version = "1", default-features = false }
quickcheck_macros = "1"
